add_subdirectory(assignmentoperator)
add_subdirectory(singleton)
add_subdirectory(duplicationinarray)
add_subdirectory(duplicationinarraynoedit)
add_subdirectory(findinpartiallysortedmatrix)
add_subdirectory(replaceblank)
add_subdirectory(utils)
add_subdirectory(printlistinreversedorder)
add_subdirectory(binarytreetest)
add_subdirectory(queuewithtwostacks)
add_subdirectory(fibonacci)
add_subdirectory(mininrotatedarray)
add_subdirectory(stringpathinmatrix)
add_subdirectory(robotmove)
add_subdirectory(cuttingrope)
add_subdirectory(numberof1)
add_subdirectory(power)
add_subdirectory(print1tomaxofndigits)
add_subdirectory(deletenodeinlist)
