add_subdirectory(assignmentoperator)
add_subdirectory(singleton)
add_subdirectory(duplicationinarray)
add_subdirectory(duplicationinarraynoedit)
add_subdirectory(findinpartiallysortedmatrix)
add_subdirectory(replaceblank)
add_subdirectory(utils)
add_subdirectory(printlistinreversedorder)
add_subdirectory(binarytreetest)
add_subdirectory(queuewithtwostacks)
add_subdirectory(fibonacci)
add_subdirectory(mininrotatedarray)
add_subdirectory(stringpathinmatrix)
add_subdirectory(robotmove)
add_subdirectory(cuttingrope)
add_subdirectory(numberof1)
add_subdirectory(power)
add_subdirectory(print1tomaxofndigits)
add_subdirectory(deletenodeinlist)
add_subdirectory(deleteduplicatednodesinlist)
add_subdirectory(regularexpressions)
add_subdirectory(numericstrings)
add_subdirectory(reorderoddeven)
add_subdirectory(kthnodefromend)
add_subdirectory(entrynodeinlistloop)
add_subdirectory(reverselist)
add_subdirectory(mergesortedlists)
add_subdirectory(substructureintree)
add_subdirectory(mirrorofbinarytree)
add_subdirectory(symmetricalbinarytree)
add_subdirectory(printmatrixclockwisely)
add_subdirectory(stackwithmin)
add_subdirectory(stackpushpoporder)
add_subdirectory(printbinarytreefromtoptobottom)
add_subdirectory(printbinarytreeinlines)
add_subdirectory(printbinarytreeinzigzag)
add_subdirectory(verifysequenceofbinarysearchtree)
add_subdirectory(pathintree)
add_subdirectory(copycomplexlist)
add_subdirectory(convertbinarysearchtree)
add_subdirectory(serializebinarytree)
add_subdirectory(stringpermutation)
add_subdirectory(morethanhalfnumber)
add_subdirectory(kleastnumbers)
add_subdirectory(streammedian)
add_subdirectory(greatestsumofsubarrays)
add_subdirectory(numberof1between1andn)
add_subdirectory(digitinsequence)
add_subdirectory(sortarrayforminnumber)
add_subdirectory(translationnumberstostring)
add_subdirectory(maxvalueofgifts)
add_subdirectory(longestsubstringwithoutdup)
add_subdirectory(uglynumber)
add_subdirectory(firstnotrepeatingchar)
add_subdirectory(firstappearenceoncecharinstream)
add_subdirectory(inversepairs)
add_subdirectory(firstcommonnodesinlists)
add_subdirectory(numberofk)
